Merge 0.16.2 (m/t)